--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.6.0",
     "@emotion/react": "^11.11.1",
     "@mdx-js/react": "^2.3.0",
     "@theme-ui/mdx": "^0.16.1",
@@ -25,6 +26,7 @@
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-theme-ui": "^0.16.1",
     "gatsby-remark-classes": "^1.0.2",
+    "gatsby-remark-highlight-code": "^3.3.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.11.0",
