--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.6.0",
     "@emotion/react": "^11.11.1",
-    "@mdx-js/react": "^2.3.0",
     "@theme-ui/mdx": "^0.16.1",
     "gatsby": "^5.11.0",
     "gatsby-plugin-google-gtag": "^5.13.1",
@@ -28,7 +27,7 @@
     "gatsby-plugin-theme-ui": "^0.16.1",
     "gatsby-remark-classes": "^1.0.2",
     "gatsby-remark-highlight-code": "^3.3.0",
-    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-remark-images": "^7.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
@@ -38,11 +37,14 @@
     "theme-ui": "^0.16.1"
   },
   "devDependencies": {
+    "@mdx-js/react": "^2.3.0",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "autoprefixer": "^10.4.19",
+    "gatsby-plugin-mdx": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6"
